# AI-HUB-fastapi

./: Dockerfile  main.py  pyproject.toml
static/blogs/: train_memory.md
static/projects/Hangman/: Hangman.css  Hangman.html  Hangman.js
static/projects/Space_Invaders/: SpaceInvaders.html
static/projects/tic-tac-toe/: tic-tac-toe.html
static/projects/tie-tac-toe/: tic-tac-toe.html  tic-tac-toe.js
static/reuse_elements/: HeaderFooter.js
static/styling/: Apps.css  News.css
templates/: About.html  Apps.html  Career.html  Events.html  Game.html  Meetups.html  News.html  Projects.html  admin.html  blog.html  blog_viewer.html  index.html
