[project]
name = "aihub"
version = "0.1.0"
description = "AI-HUB"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "\"MIT\""}
readme = "README.md"
requires-python = ">=3.10, <=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
    
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
